--- a/index.html
+++ b/index.html
@@ -7,7 +7,21 @@
 	<title>Test</title>
 </head>
 <body>
-	alert Holitas
+	<ul>
+		<li>Black</li>
+		<li>Green</li>
+		<li>Red</li>
+		<li>Yellow</li>
+		<li>Blue</li>
+		<li>Pink</li>
+		<li>Fucsia</li>
+		<li>Purple</li>
+		<li>Brown</li>
+		<li>Violet</li>
+
+		
+
+	</ul>	
 
 </body>
 </html>>
